[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmrepo-api"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "vidyasagar0405", email = "vidyasagar0405@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [ "pandas", "requests" ]

[project.urls]
Documentation = "https://github.com/vidyasagar0405/gmrepo-api#readme"
Issues = "https://github.com/vidyasagar0405/gmrepo-api/issues"
Source = "https://github.com/vidyasagar0405/gmrepo-api"

[tool.hatch.version]
path = "src/gmrepo_api/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gmrepo_api tests}"

[tool.coverage.run]
source_pkgs = ["gmrepo_api", "tests"]
branch = true
parallel = true
omit = [
  "src/gmrepo_api/__about__.py",
]

[tool.coverage.paths]
gmrepo_api = ["src/gmrepo_api", "*/gmrepo-api/src/gmrepo_api"]
tests = ["tests", "*/gmrepo-api/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
